[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/Highscores/HighscoreItem.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="HighscoreItem" type="MarginContainer"]
margin_top = 148.0
margin_right = 1680.0
margin_bottom = 215.0
script = ExtResource( 1 )

[node name="NumberText" type="Label" parent="."]
margin_top = 8.0
margin_right = 1680.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "1"
valign = 1

[node name="NameText" type="Label" parent="."]
margin_top = 8.0
margin_right = 1680.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "wwwwwwwwwwwwwwwwwwww"
align = 1
valign = 1

[node name="ScoreText" type="Label" parent="."]
margin_top = 8.0
margin_right = 1680.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.121764, 1.14549, 0.69, 1 )
text = "500"
align = 2
valign = 1

